--- a/jpa-hibernatepanche/src/main/resources/application.properties
+++ b/jpa-hibernatepanche/src/main/resources/application.properties
@@ -1,5 +1,15 @@
+#Default Datasource
 quarkus.datasource.db-kind=h2
 quarkus.datasource.jdbc.url=jdbc:h2:mem:myDB
+
+#Datasource for Author
+#quarkus.datasource.author.db-kind=h2
+#quarkus.datasource.author.jdbc.url=jdbc:h2:mem:myDB
+quarkus.datasource.author.db-kind=postgresql
+quarkus.datasource.author.username=hibernate
+quarkus.datasource.author.password=hibernate
+quarkus.datasource.author.jdbc.url=jdbc:postgresql://localhost:5432/hibernate_db
+
 
 # Hibernate configuration
 quarkus.hibernate-orm.database.generation=drop-and-create
